# AnalisisTecnico

./: .gitignore  CLAUDE.md
trading-analysis-platform/backend/: .env.example  README.md  pyproject.toml  requirements.txt
trading-analysis-platform/backend/app/: __init__.py  ca_bundle.py  chart_workspaces.py  config.py  database.py  main.py  timeframes.py
trading-analysis-platform/backend/app/models/: __init__.py  accion.py  analisis_dibujo.py  c090_portafolio.py  c091_posicion_portafolio.py  catalogo_usuario_accion.py  chat_conversacion.py  chat_mensaje.py  configuracion_scorecard.py  indicador_configuracion.py  layout_grafica.py  lista_mercado.py  lista_mercado_detalle.py  market_cache.py  noticia.py  noticia_instrumento.py  operacion_simulada.py  password_token.py  preferencia_usuario.py  usuario.py
trading-analysis-platform/backend/app/repositories/: acciones_repository.py  catalogo_repository.py  chat_repository.py  dibujos_repository.py  indicadores_repository.py  layouts_repository.py  sql_utils.py  (+9 more)
trading-analysis-platform/backend/scripts/: create_admin.py  export_win_ca.py  run_migrations.py  smoke_ai_chat.py  smoke_ai_real.py  smoke_chatgpt_watchlist.py
trading-analysis-platform/backend/sql/: 001_auth_fields_and_indexes.sql  002_password_tokens.sql  004_ai_chat.sql  005_operaciones_simuladas.sql  006_news_and_market_movers.sql  008_remove_roic_module.sql  009_chart_workspaces.sql  010_workspace_scoped_drawings.sql  011_scorecard_config.sql  012_simulated_entry_snapshot.sql  013_market_intelligence_cache.sql  014_portfolios.sql  015_user_preferences.sql
(+393 files in other folders)
