[project]
name = "trading-analysis-backend"
version = "0.1.0"
description = "Backend FastAPI para plataforma personal de analisis tecnico"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.6",
    "yfinance>=0.2.43",
    "pandas>=2.2.2",
    "pydantic>=2.9.2",
    "pydantic-settings>=2.5.2",
]

[project.optional-dependencies]
dev = ["pytest>=8.3.3", "httpx>=0.27.2"]

[tool.pytest.ini_options]
testpaths = ["app/tests"]
addopts = "-q"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]
